# agos

./: .gitignore  CMakeLists.txt  agos.aseprite  array.c  array.h  build-debug.hxml  hex.c  hex.h  index.html  main.c  main.js  package.json  pch.h  ui.c  ui.h  world.c  world.h
data/: isoshader.glsl
data/styles/: global.css
scripts/: CopyData.bat
src/: Hex.hx  Main.hx  index.js
